# Diary_proj

./: .env  .env.sample  Dockerfile  README.md  all_data.json  auth_data.json  celerybeat-schedule.db  docker-compose.yaml  pyproject.toml  requirements.txt
diary/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/: base.html  homepage.html
diary/templates/diary/: entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
diary/templates/includes/: inc_menu.html
diary/templatetags/: my_tags.py
diary_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
memories/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
memories/migrations/: 0001_initial.py
memories/templates/memories/: memory_form.html
static/css/: styles.css
users/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py  0003_alter_user_options.py  0004_alter_user_managers.py  0005_user_telegram_chat_id.py  0006_user_auto_deactivated.py
users/templates/users/: login.html  recovery_form.html  register.html  user_form.html
