[tool.poetry]
name = "diary-project"
version = "0.1.0"
description = ""
authors = ["serebriakovanton <cu-hawk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
ipython = "^8.27.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"
setuptools = "^74.1.2"
coverage = "^7.6.1"
docker = "^7.1.0"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
